--- a/GalaxyInvaders/SpaceInvaders/SpaceInvaders/Game.xaml
+++ b/GalaxyInvaders/SpaceInvaders/SpaceInvaders/Game.xaml
@@ -15,9 +15,12 @@
     
     <Grid x:Name="grid" Background="{ThemeResource ApplicationPageBackgroundThemeBrush}" Loaded="allowfocus_Loaded"  >
         <Border BorderBrush="Blue" BorderThickness="3" MaxHeight="600" MaxWidth="1000" Margin="10">
-            <Canvas x:Name="canvas" MaxHeight="600" MaxWidth="1000">
+            <Canvas x:Name="canvas" Height="600" Width="1000">
+                <Canvas.Background>
+                    <ImageBrush ImageSource="ms-appx:///Assets/Images/Fondo Space Invaders.jpg"/>
+                </Canvas.Background>
                 <Image x:Name="player" Source="ms-appx:///Assets/Images/AlienNavePro.png" Height="58" Width="72"
-                       Canvas.Left="{Binding posX, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" Canvas.Top="540"  />
+                       Canvas.Left="{Binding posX, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" Canvas.Top="{Binding posYMisil,Mode=TwoWay,UpdateSourceTrigger=PropertyChanged}"  />
                 <!--<Image x:Name="misil" Source="ms-appx:///Assets/Images/MisilPro.png" Canvas.Top="{Binding posYMisil,Mode=TwoWay,UpdateSourceTrigger=PropertyChanged}"/>-->
             </Canvas>
         </Border>
