--- a/GalaxyInvaders/SpaceInvaders/SpaceInvaders/Game.xaml
+++ b/GalaxyInvaders/SpaceInvaders/SpaceInvaders/Game.xaml
@@ -12,16 +12,15 @@
     <Page.DataContext>
         <vm:VMGame></vm:VMGame>
     </Page.DataContext>
-    
-    <Grid x:Name="grid" Background="{ThemeResource ApplicationPageBackgroundThemeBrush}" Loaded="allowfocus_Loaded"  >
-        <Border BorderBrush="Blue" BorderThickness="3" MaxHeight="600" MaxWidth="1000" Margin="10">
-            <Canvas x:Name="canvas" Height="600" Width="1000">
+
+    <Grid x:Name="grid" Background="Black" Loaded="allowfocus_Loaded"  >
+        <Border BorderBrush="Green" BorderThickness="3" MaxHeight="600" MaxWidth="1350" Margin="10">
+            <Canvas x:Name="canvas" MaxHeight="600" MaxWidth="1350">
                 <Canvas.Background>
-                    <ImageBrush ImageSource="ms-appx:///Assets/Images/Fondo Space Invaders.jpg"/>
+                    <ImageBrush ImageSource="ms-appx:///Assets/Images/Fondo Space Invaders.jpg" />
                 </Canvas.Background>
-                <Image x:Name="player" Source="ms-appx:///Assets/Images/AlienNavePro.png" Height="58" Width="72"
-                       Canvas.Left="{Binding posX, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" Canvas.Top="{Binding posYMisil,Mode=TwoWay,UpdateSourceTrigger=PropertyChanged}"  />
-                <!--<Image x:Name="misil" Source="ms-appx:///Assets/Images/MisilPro.png" Canvas.Top="{Binding posYMisil,Mode=TwoWay,UpdateSourceTrigger=PropertyChanged}"/>-->
+                <Image x:Name="player" Source="{Binding player.imagen}" Height="58" Width="72" Visibility="{Binding player.visible,Mode=TwoWay,UpdateSourceTrigger=PropertyChanged}"
+                       Canvas.Left="{Binding player.posicionX, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" Canvas.Top="534"  />
             </Canvas>
         </Border>
         <!--<TextBox x:Name="text" KeyDown="text_KeyDown" />-->
